Mettre en place mot de passe oublié

--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -23,9 +23,10 @@
     <input type="hidden" name="_csrf_token"
            value="{{ csrf_token('authenticate') }}"
     >
-
+    
     <button class="btn btn-lg btn-primary" type="submit">
         Sign in
     </button>
 </form>
+<a href={{path('app_forgot_password_request')}}>Forgot my password</a>
 {% endblock %}
