Ajouter le logo dans public/images et installer le package asset

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -20,9 +20,9 @@
       <div class="container-fluid">
         <a class="navbar-brand" href="#"
           ><img
-            src="./images/pro_immo_portail_logo.png"
+            src={{ asset('images/pro-immo-portail_logo.png') }}
             alt="Logo"
-            class="img-fluid"
+            class="img-fluid w-25"
         /></a>
         <button
           class="navbar-toggler collapsed"
@@ -40,8 +40,11 @@
           <ul class="navbar-nav me-auto mb-2 mb-sm-0">
             <li class="nav-item">
               <a class="nav-link active" aria-current="page" href="#"
-                >Acheter</a
+                >Accueil</a
               >
+            </li>
+             <li class="nav-item">
+              <a class="nav-link" href="#">Acheter</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="#">Louer</a>
