--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -10,23 +10,35 @@
 
     {% if app.user %}
         <div class="mb-3">
-            You are logged in as {{ app.user.userIdentifier }}, <a href="{{ path('app_logout') }}">Logout</a>
+            Vous êtes connecté en tant que : {{ app.user.userIdentifier }}, <a href="{{ path('app_logout') }}">Déconnexion</a>
         </div>
     {% endif %}
 
-    <h1 class="h3 mb-3 font-weight-normal">Please sign in</h1>
-    <label for="inputEmail">Email</label>
-    <input type="email" value="{{ last_username }}" name="email" id="inputEmail" class="form-control" autocomplete="email" required autofocus>
-    <label for="inputPassword">Password</label>
-    <input type="password" name="password" id="inputPassword" class="form-control" autocomplete="current-password" required>
+    <h1 class="h3 mb-3 font-weight-normal text-center mt-2">Me connecter</h1>
+    <div class="d-flex flex-column w-50 m-auto gap-2">
+    <label for="inputEmail">E-mail</label>
+    <input type="email" value="{{ last_username }}" name="email" placeholder="Saisissez votre e-mail" id="inputEmail" class="form-control" autocomplete="email" required autofocus>
+    <label for="inputPassword">Mot de passe</label>
+    <input type="password" name="password" placeholder="Saisissez votre mot de passe" id="inputPassword" class="form-control" autocomplete="current-password" required>
 
     <input type="hidden" name="_csrf_token"
            value="{{ csrf_token('authenticate') }}"
     >
     
-    <button class="btn btn-lg btn-primary" type="submit">
-        Sign in
+    <button class="btn btn-lg btn-primary m-auto" type="submit">
+        Se connecter
     </button>
+    </div>
 </form>
-<a href={{path('app_forgot_password_request')}}>Forgot my password</a>
+
+
+<a href={{path('app_forgot_password_request')}}><p class="text-center mt-2">J'ai oublié mon mot de passe</p></a>
+
+<hr class="w-50 m-auto">
+<div class="d-flex flex-column w-50 m-auto justify-content-center align-items-center gap-2">
+<p class="text-center mt-3">Vous n'avez pas encore de compte ?</p>
+
+<a href={{path('app_register')}}><button class="btn btn-lg btn-primary">Créer un compte</button></a>
+
+</div>
 {% endblock %}
