--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -2,6 +2,21 @@
 
 {% block body %}
     {% for property in properties %}
-        {{property.title}}
+    <div>
+    <h1>{{property.title}}</h1>
+    <p>{{property.description}}</p>
+    {{property.type}}
+    {{property.price}}
+    {{property.surface}}
+    {{property.address}}
+    {{property.town}}
+    {# !Les commentaires marches pas bien parce que elles sont pas de type text #}
+    {# {{property.postal_code}} #}
+    {{property.country}}
+    {# {{property.is_rent}} #}
+    {# {{property.is_on_sale}} #}
+    {# {{property.createdAt}}
+    {{property.updatedAt}} #}
+    </div>
     {% endfor %}
 {% endblock %}
