--- a/templates/property/index.html.twig
+++ b/templates/property/index.html.twig
@@ -1,20 +1,61 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Hello PropertyController!{% endblock %}
+{% block title %}Property index{% endblock %}
 
 {% block body %}
-<style>
-    .example-wrapper { margin: 1em auto; max-width: 800px; width: 95%; font: 18px/1.5 sans-serif; }
-    .example-wrapper code { background: #F5F5F5; padding: 2px 6px; }
-</style>
+    <h1>Property index</h1>
 
-<div class="example-wrapper">
-    <h1>Hello {{ controller_name }}! ✅</h1>
+    <table class="table">
+        <thead>
+            <tr>
+                <th>Id</th>
+                <th>Title</th>
+                <th>Description</th>
+                <th>Type</th>
+                <th>Price</th>
+                <th>Surface</th>
+                <th>Address</th>
+                <th>Town</th>
+                <th>PostalCode</th>
+                <th>Country</th>
+                <th>Photo</th>
+                <th>IsRent</th>
+                <th>IsOnSale</th>
+                <th>CreatedAt</th>
+                <th>UpdatedAt</th>
+                <th>actions</th>
+            </tr>
+        </thead>
+        <tbody>
+        {% for property in properties %}
+            <tr>
+                <td>{{ property.id }}</td>
+                <td>{{ property.Title }}</td>
+                <td>{{ property.Description }}</td>
+                <td>{{ property.Type }}</td>
+                <td>{{ property.Price }}</td>
+                <td>{{ property.Surface }}</td>
+                <td>{{ property.address }}</td>
+                <td>{{ property.Town }}</td>
+                <td>{{ property.PostalCode }}</td>
+                <td>{{ property.Country }}</td>
+                <td>{{ property.Photo }}</td>
+                <td>{{ property.isRent ? 'Yes' : 'No' }}</td>
+                <td>{{ property.isOnSale ? 'Yes' : 'No' }}</td>
+                <td>{{ property.createdAt ? property.createdAt|date('Y-m-d') : '' }}</td>
+                <td>{{ property.updatedAt ? property.updatedAt|date('Y-m-d') : '' }}</td>
+                <td>
+                    <a href="{{ path('app_property_show', {'id': property.id}) }}">show</a>
+                    <a href="{{ path('app_property_edit', {'id': property.id}) }}">edit</a>
+                </td>
+            </tr>
+        {% else %}
+            <tr>
+                <td colspan="16">no records found</td>
+            </tr>
+        {% endfor %}
+        </tbody>
+    </table>
 
-    This friendly message is coming from:
-    <ul>
-        <li>Your controller at <code><a href="{{ '/home/marija/wf3/projet-de-groupe/pro-immo-portail/src/Controller/PropertyController.php'|file_link(0) }}">src/Controller/PropertyController.php</a></code></li>
-        <li>Your template at <code><a href="{{ '/home/marija/wf3/projet-de-groupe/pro-immo-portail/templates/property/index.html.twig'|file_link(0) }}">templates/property/index.html.twig</a></code></li>
-    </ul>
-</div>
+    <a href="{{ path('app_property_new') }}">Create new</a>
 {% endblock %}
