--- a/templates/registration/register.html.twig
+++ b/templates/registration/register.html.twig
@@ -18,6 +18,6 @@
         }) }}
         {{ form_row(registrationForm.agreeTerms) }}
 
-        <button type="submit" class="btn">Register</button>
+        {# <button type="submit" class="btn">Register</button> #}
     {{ form_end(registrationForm) }}
 {% endblock %}
