--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -43,7 +43,7 @@
                 >Accueil</a
               >
             </li>
-             <li class="nav-item">
+            <li class="nav-item">
               <a class="nav-link" href="#">Acheter</a>
             </li>
             <li class="nav-item">
@@ -63,7 +63,12 @@
         </div>
       </div>
     </nav>
+    <div class="col-lg-8 mx-auto p-4 py-md-5">
         {% block body %}{% endblock %}
+    </div>
+
+
+
         <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.min.js" integrity="sha384-Rx+T1VzGupg4BHQYs2gCW9It+akI2MM/mndMCy36UVfodzcJcF0GGLxZIzObiEfa" crossorigin="anonymous"></script>
     </body>
