--- a/templates/property/show.html.twig
+++ b/templates/property/show.html.twig
@@ -3,72 +3,28 @@
 {% block title %}Property{% endblock %}
 
 {% block body %}
-    <h1>Property</h1>
 
-    <table class="table">
-        <tbody>
-            <tr>
-                <th>Id</th>
-                <td>{{ property.id }}</td>
-            </tr>
-            <tr>
-                <th>Title</th>
-                <td>{{ property.Title }}</td>
-            </tr>
-            <tr>
-                <th>Description</th>
-                <td>{{ property.Description }}</td>
-            </tr>
-            <tr>
-                <th>Type</th>
-                <td>{{ property.Type }}</td>
-            </tr>
-            <tr>
-                <th>Price</th>
-                <td>{{ property.Price }}</td>
-            </tr>
-            <tr>
-                <th>Surface</th>
-                <td>{{ property.Surface }}</td>
-            </tr>
-            <tr>
-                <th>Address</th>
-                <td>{{ property.address }}</td>
-            </tr>
-            <tr>
-                <th>Town</th>
-                <td>{{ property.Town }}</td>
-            </tr>
-            <tr>
-                <th>PostalCode</th>
-                <td>{{ property.PostalCode }}</td>
-            </tr>
-            <tr>
-                <th>Country</th>
-                <td>{{ property.Country }}</td>
-            </tr>
-            <tr>
-                <th>Photo</th>
-                <td>{{ property.Photo }}</td>
-            </tr>
-            <tr>
-                <th>IsRent</th>
-                <td>{{ property.isRent ? 'Yes' : 'No' }}</td>
-            </tr>
-            <tr>
-                <th>IsOnSale</th>
-                <td>{{ property.isOnSale ? 'Yes' : 'No' }}</td>
-            </tr>
-            <tr>
-                <th>CreatedAt</th>
-                <td>{{ property.createdAt ? property.createdAt|date('Y-m-d') : '' }}</td>
-            </tr>
-            <tr>
-                <th>UpdatedAt</th>
-                <td>{{ property.updatedAt ? property.updatedAt|date('Y-m-d') : '' }}</td>
-            </tr>
-        </tbody>
-    </table>
+
+<header class="d-flex align-items-center pb-3 mb-5 border-bottom">
+    <a href="/" class="d-flex align-items-center text-body-emphasis text-decoration-none">
+    <svg class="bi me-2" width="40" height="32"><use xlink:href="#bootstrap"></use></svg>
+    <span class="fs-4">{{ property.Title }}</span>
+    </a>
+</header>
+{# TODO photo gallery #}
+<div>
+    <h3>{{ property.Town }}({{ property.PostalCode }})</h3>
+    <p>Prix: <span>{{ property.Price }}€</span></p>
+    <p>Surface: <span>{{ property.Surface }}m²</span></p>
+    <hr class="col-3 col-md-2 mb-5">
+    <p>Type de propriété: {{ property.Type }}</p>
+    <hr class="col-3 col-md-2 mb-5">
+    <p class="fs-5 col-md-8">{{ property.Description }}</p>
+
+    <hr class="col-3 col-md-2 mb-5">
+    {# TODO Map #}
+    {# TODO Contact form #}
+</div>
 
     <a href="{{ path('app_property_index') }}">back to list</a>
 
