--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -64,7 +64,30 @@
       </div>
     </nav>
         {% block body %}{% endblock %}
-        <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.min.js" integrity="sha384-Rx+T1VzGupg4BHQYs2gCW9It+akI2MM/mndMCy36UVfodzcJcF0GGLxZIzObiEfa" crossorigin="anonymous"></script>
+
+    <footer class="d-flex flex-wrap justify-content-between align-items-center py-3 my-4 border-top">
+      <p class="col-md-4 mb-0 text-body-secondary">© 2023 HAVAIC Marija et PARSONNEAU Aurélie</p>
+
+      <a href="/" class="col-md-4 d-flex align-items-center justify-content-center mb-3 mb-md-0 me-md-auto link-body-emphasis text-decoration-none">
+        <img
+            src={{ asset('images/pro-immo-portail_logo.png') }}
+            alt="Logo"
+            class="img-fluid w-25"
+        />
+      </a>
+
+      <ul class="nav col-md-4 justify-content-end">
+        <li class="nav-item"><a href="#" class="nav-link px-2 text-body-secondary">Accueil</a></li>
+        <li class="nav-item"><a href="#" class="nav-link px-2 text-body-secondary">Paramétrer mes cookies</a></li>
+        <li class="nav-item"><a href="#" class="nav-link px-2 text-body-secondary">Conditions Générales d'Utilisation</a></li>
+        <li class="nav-item"><a href="#" class="nav-link px-2 text-body-secondary">Politique Générale de Protection des Données</a></li>
+        {# TODO on peut le mettre s'il y a du temps #}
+        {# <li class="nav-item"><a href="#" class="nav-link px-2 text-body-secondary">Fonctionnement de notre site</a></li> #}
+      </ul>
+  </footer>
+
+
+      <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
+      <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.min.js" integrity="sha384-Rx+T1VzGupg4BHQYs2gCW9It+akI2MM/mndMCy36UVfodzcJcF0GGLxZIzObiEfa" crossorigin="anonymous"></script>
     </body>
 </html>
