--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -18,7 +18,7 @@
       aria-label="Third navbar example"
     >
       <div class="container-fluid">
-        <a class="navbar-brand" href="#"
+        <a class="navbar-brand" href="{{ path('app_home') }}"
           ><img
             src={{ asset('images/pro-immo-portail_logo.png') }}
             alt="Logo"
@@ -38,23 +38,17 @@
 
         <div class="navbar-collapse collapse" id="navbarsExample03" style="">
           <ul class="navbar-nav me-auto mb-2 mb-sm-0">
-            <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="#"
+            {# <li class="nav-item">
+              <a class="nav-link active" aria-current="page" href="{{ path('app_home') }}"
                 >Accueil</a
               >
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">Acheter</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">Louer</a>
-            </li>
-            <li class="nav-item">
+            </li> #}
+            {# <li class="nav-item">
               <a class="nav-link">Mes favoris</a>
-            </li>
+            </li> #}
           </ul>
 
-          <div class="col-md-3 text-end">
+          <div class=" text-end">
             <button type="button" class="btn btn-outline-primary me-2">
               Login
             </button>
@@ -72,7 +66,7 @@
     <footer class="d-flex flex-wrap justify-content-between align-items-center py-3 my-4 border-top">
       <p class="col-md-4 mb-0 text-body-secondary">© 2023 HAVAIC Marija et PARSONNEAU Aurélie</p>
 
-      <a href="/" class="col-md-4 d-flex align-items-center justify-content-center mb-3 mb-md-0 me-md-auto link-body-emphasis text-decoration-none">
+      <a href="{{ path('app_home') }}" class="col-md-4 d-flex align-items-center justify-content-center mb-3 mb-md-0 me-md-auto link-body-emphasis text-decoration-none">
         <img
             src={{ asset('images/pro-immo-portail_logo.png') }}
             alt="Logo"
