Ajout de paginator

--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -19,4 +19,8 @@
     {{property.updatedAt}} #}
     </div>
     {% endfor %}
+    <div class="d-flex justify-content-center mt-3">
+                    {{ knp_pagination_render(properties) }}
+                    </nav>
+                </div> 
 {% endblock %}
