--- a/templates/reset_password/request.html.twig
+++ b/templates/reset_password/request.html.twig
@@ -6,17 +6,21 @@
     {% for flash_error in app.flashes('reset_password_error') %}
         <div class="alert alert-danger" role="alert">{{ flash_error }}</div>
     {% endfor %}
-    <h1>Reset your password</h1>
+    <div class="h-100 p-5 bg-body-tertiary border rounded-3">
+
+        
+    <h1 class="h3 mb-3 font-weight-normal text-center mt-2">Mot de passe oublié ?</h1>
 
     {{ form_start(requestForm) }}
-        {{ form_row(requestForm.email) }}
         <div>
-            <small>
-                Enter your email address, and we will send you a
-                link to reset your password.
-            </small>
+            <p>
+                Veuillez saisir l’adresse e-mail de votre compte pour réinitialiser votre mot de passe. Vous allez recevoir un e-mail contenant un lien de réinitialisation dans quelques minutes !
+            </p>
         </div>
+        {{ form_row(requestForm.email) }}
+        
 
-        <button class="btn btn-primary">Send password reset email</button>
+        <button class="btn btn-primary">Réinitialiser</button>
     {{ form_end(requestForm) }}
+    </div>
 {% endblock %}
