--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -13,26 +13,16 @@
 					
 					<div class="">
 						<h1>{{property.title}}</h1>
-						{# <h3>{{property.type}}</h3> #}
 						<p>{{property.description}}</p>
 						<p>{{property.price}}
 							€</p>
 						<p>{{property.surface}}
 							m²</p>
 						<p>{{property.town}}</p>
-						{# {{property.address}} #}
-
-					{# !Les commentaires marches pas bien parce que elles sont pas de type text #}
-						{# {{property.postal_code}} #}
-						{# {{property.country}} #}
-						{# {{property.is_rent}} #}
-						{# {{property.is_on_sale}} #}
-						{# {{property.createdAt}}
-						{{property.updatedAt}} #}
 					</div>
 				</div>
                 <div class="text-center pt-3">
-				<button class="btn btn-primary ">Voir</button>
+				<a href={{ path('app_property_show', {'id': property.id}) }}><button class="btn btn-primary ">Voir</button></a>
                 </div>
 			</div>
 
@@ -40,4 +30,16 @@
 </div>
 <div class="d-flex justify-content-center mt-3">
 	{{ knp_pagination_render(properties) }}
-</nav></div>{% endblock %}
+</div>
+
+<div class="container row m-auto">
+<h2 class="text-center pt-5">A propos de nous :</h2>
+
+<p class="m-auto pt-2">Bienvenue chez Pro Immo Portail ! Votre passerelle vers le marché immobilier moderne. Nous sommes une agence <strong>innovante</strong> dédiée à simplifier la recherche de biens immobiliers, que ce soit pour la location ou l'achat. Notre plateforme en ligne offre une expérience sans pareille en mettant en relation des particuliers et des professionnels à travers des annonces de qualité. Notre mission est de rendre le processus de recherche et de transaction immobilière aussi transparent et efficace que possible.</p>
+
+<p class="pt-3">Ici vous trouverez des <strong>annonces de qualité</strong> grâce à notre séléction rigoureuse de professionnels de l'immobilier.</p>
+
+<p><strong>Découvrez aujourd'hui la nouvelle façon de trouver votre chez-vous avec Pro Immo Portail !</strong></p>
+</div>
+
+{% endblock %}
