--- a/templates/property/show.html.twig
+++ b/templates/property/show.html.twig
@@ -5,30 +5,35 @@
 {% block body %}
 
 
-<header class="d-flex align-items-center pb-3 mb-5 border-bottom">
+
+<header class="d-flex align-items-center justify-content-center pb-3 mb-5 border-bottom">
     <a href="/" class="d-flex align-items-center text-body-emphasis text-decoration-none">
     <svg class="bi me-2" width="40" height="32"><use xlink:href="#bootstrap"></use></svg>
-    <span class="fs-4">{{ property.Title }}</span>
+    <h2>{{ property.Title }}</h2>
     </a>
 </header>
 {# TODO photo gallery #}
-<div>
+<div <div class="container row m-auto">
+<img class="w-auto pb-3" src={{asset("images/facade.jpg")}} alt="">
+
+<div class="d-flex flex-column">
     <h3>{{ property.Town }}({{ property.PostalCode }})</h3>
     <p>Prix: <span>{{ property.Price }}€</span></p>
     <p>Surface: <span>{{ property.Surface }}m²</span></p>
     <hr class="col-3 col-md-2 mb-5">
     <p>Type de propriété: {{ property.Type }}</p>
     <hr class="col-3 col-md-2 mb-5">
-    <p class="fs-5 col-md-8">{{ property.Description }}</p>
+    <p class="fs-5 col-md-8">Description du bien : <br>{{ property.Description }}</p>
 
     <hr class="col-3 col-md-2 mb-5">
     {# TODO Map #}
     {# TODO Contact form #}
 </div>
 
-    <a href="{{ path('app_property_index') }}">back to list</a>
+    <a href="{{ path('app_home') }}"><button class="btn btn-primary mb-2">Retour à l'accueil</button></a>
 
-    <a href="{{ path('app_property_edit', {'id': property.id}) }}">edit</a>
+    <a href="{{ path('app_property_edit', {'id': property.id}) }}"><button class="btn btn-primary">Editer mon annonce</button></a>
 
-    {{ include('property/_delete_form.html.twig') }}
+    {# {{ include('property/_delete_form.html.twig') }} #}
+    </div>
 {% endblock %}
