--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -48,14 +48,18 @@
             </li> #}
           </ul>
 
-          <div class=" text-end">]
-          {% if is_granted('IS') %}
-            
+          <div class=" text-end">
+            <ul class="nav nav-pills">
+          {% if is_granted('IS_AUTHENTICATED_FULLY') %}
+          
+            <li class="nav-item"><a href={{ path('app_logout')}} class="nav-link active">Déconnexion</a></li>
+          
+        
+          {% else %}
+              <li class="nav-item"><a href={{ path('app_logout')}} class="nav-link active px-2 mx-3">Connexion</a></li>
+                <li class="nav-item"><a href={{ path('app_register')}} class="nav-link active px-2">Inscription</a></li>
           {% endif %}
-            <button type="button" class="btn btn-outline-primary me-2">
-              Login
-            </button>
-            <button type="button" class="btn btn-primary">Register</button>
+          </ul>
           </div>
         </div>
       </div>
