--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -56,7 +56,7 @@
           
         
           {% else %}
-              <li class="nav-item"><a href={{ path('app_logout')}} class="nav-link active px-2 mx-3">Connexion</a></li>
+              <li class="nav-item"><a href={{ path('app_login')}} class="nav-link active px-2 mx-3">Connexion</a></li>
                 <li class="nav-item"><a href={{ path('app_register')}} class="nav-link active px-2">Inscription</a></li>
           {% endif %}
           </ul>
