essai de faker image

--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -19,6 +19,7 @@
 						<p>{{property.surface}}
 							m²</p>
 						<p>{{property.town}}</p>
+                        <img src={{property.photo}} alt="">
 					</div>
 				</div>
                 <div class="text-center pt-3">
