--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -38,11 +38,11 @@
 
         <div class="navbar-collapse collapse" id="navbarsExample03" style="">
           <ul class="navbar-nav me-auto mb-2 mb-sm-0">
-            {# <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="{{ path('app_home') }}"
-                >Accueil</a
+            <li class="nav-item">
+              <a class="nav-link active" aria-current="page" href="{{ path('app_favorite') }}"
+                >Favoris</a
               >
-            </li> #}
+            </li>
             {# <li class="nav-item">
               <a class="nav-link">Mes favoris</a>
             </li> #}
