--- a/templates/favorite/index.html.twig
+++ b/templates/favorite/index.html.twig
@@ -3,18 +3,29 @@
 {% block title %}Hello FavoriteController!{% endblock %}
 
 {% block body %}
-<style>
-    .example-wrapper { margin: 1em auto; max-width: 800px; width: 95%; font: 18px/1.5 sans-serif; }
-    .example-wrapper code { background: #F5F5F5; padding: 2px 6px; }
-</style>
 
-<div class="example-wrapper">
-    <h1>Hello {{ controller_name }}! ✅</h1>
 
-    This friendly message is coming from:
-    <ul>
-        <li>Your controller at <code><a href="{{ '/home/marija/wf3/projet-de-groupe/pro-immo-portail/src/Controller/FavoriteController.php'|file_link(0) }}">src/Controller/FavoriteController.php</a></code></li>
-        <li>Your template at <code><a href="{{ '/home/marija/wf3/projet-de-groupe/pro-immo-portail/templates/favorite/index.html.twig'|file_link(0) }}">templates/favorite/index.html.twig</a></code></li>
-    </ul>
-</div>
+{% for favorite in favorites %}
+    {% for property in favorite.property %}
+        <div class="col-sm-6 pt-3">
+            <div class="d-flex gap-1 justify-content-center align-items-center">
+                
+                    <img class="w-auto" src={{asset("images/facade.jpg")}} alt="">
+                
+                <div class="">
+                    <h1>{{property.title}}</h1>
+                    <p>{{property.description}}</p>
+                    <p>{{property.price}}
+                        €</p>
+                    <p>{{property.surface}}
+                        m²</p>
+                    <p>{{property.town}}</p>
+                </div>
+            </div>
+            <div class="text-center pt-3">
+            <a href={{ path('app_property_show', {'id': property.id}) }}><button class="btn btn-primary ">Voir</button></a>
+            </div>
+        </div>
+        {% endfor %}
+    {% endfor %}
 {% endblock %}
