--- a/templates/property/new.html.twig
+++ b/templates/property/new.html.twig
@@ -1,11 +1,12 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}New Property{% endblock %}
+{% block title %}Pro Immo Portail | Créer une nouvelle annonce{% endblock %}
 
-{% block body %}
-    <h1>Create new Property</h1>
-
+{% block body %}   
+<div class="container row m-auto">
+    <h1>Créer une nouvelle annonce</h1>
     {{ include('property/_form.html.twig') }}
+</div>
 
-    <a href="{{ path('app_property_index') }}">back to list</a>
+<a href="{{ path('app_property_index') }}">back to list</a>
 {% endblock %}
