--- a/templates/property/edit.html.twig
+++ b/templates/property/edit.html.twig
@@ -3,9 +3,11 @@
 {% block title %}Edit Property{% endblock %}
 
 {% block body %}
-    <h1>Edit Property</h1>
+<div class="container row m-auto">
+    <h1>Modifiez votre annonce</h1>
 
     {{ include('property/_form.html.twig', {'button_label': 'Update'}) }}
+</div>
 
     <a href="{{ path('app_property_index') }}">back to list</a>
 
