Ajouter les photos avec faker

--- a/templates/property/show.html.twig
+++ b/templates/property/show.html.twig
@@ -15,6 +15,7 @@
 {# TODO photo gallery #}
 <div <div class="container row m-auto">
 <img class="w-auto pb-3" src={{asset("images/facade.jpg")}} alt="">
+<img class="w-auto" src={{property.photo}} alt="">
 
 <div class="d-flex flex-column">
     <h3>{{ property.Town }}({{ property.PostalCode }})</h3>
