--- a/templates/registration/register.html.twig
+++ b/templates/registration/register.html.twig
@@ -9,23 +9,23 @@
 
     <h1 class="text-center">Créer un compte</h1>
 
-<div class="d-flex flex-column w-50 m-auto gap-2">
-    {{ form_errors(registrationForm) }}
+    <div class="d-flex flex-column w-50 m-auto gap-2">
+        {{ form_errors(registrationForm) }}
 
-    {{ form_start(registrationForm) }}
-    {{ form_row(registrationForm.firstname) }}
-    {{ form_row(registrationForm.lastname) }}
-        {{ form_row(registrationForm.email) }}
-        {{ form_row(registrationForm.plainPassword, {
-            label: 'Mot de passe'
-        }) }}
-        {{ form_row(registrationForm.agreeTerms) }}
+        {{ form_start(registrationForm) }}
+        {{ form_row(registrationForm.firstname) }}
+        {{ form_row(registrationForm.lastname) }}
+            {{ form_row(registrationForm.email) }}
+            {{ form_row(registrationForm.plainPassword, {
+                label: 'Mot de passe'
+            }) }}
+            {{ form_row(registrationForm.agreeTerms) }}
 
-        <form action="">
-        <input class="me-2" type="checkbox">Mémoriser mon identifiant et mon mot de passe lors de mes prochaines visites sur ce site</form>
-        {# <button type="submit" class="btn">Register</button> #}
-    {{ form_end(registrationForm) }}
-</div>
+            {# <form action="">
+            <input class="me-2" type="checkbox">Mémoriser mon identifiant et mon mot de passe lors de mes prochaines visites sur ce site</form> #}
+            <button type="submit" class="d-flex flex-column m-auto mb-3 btn btn-primary">Register</button>
+        {{ form_end(registrationForm) }}
+    </div>
 
 
 <hr class="w-50 m-auto">
