--- a/templates/registration/register.html.twig
+++ b/templates/registration/register.html.twig
@@ -19,6 +19,7 @@
             {{ form_row(registrationForm.plainPassword, {
                 label: 'Mot de passe'
             }) }}
+            {{ form_row(registrationForm.isPro) }}
             {{ form_row(registrationForm.agreeTerms) }}
 
             {# <form action="">
