--- a/templates/property/_form.html.twig
+++ b/templates/property/_form.html.twig
@@ -1,4 +1,4 @@
 {{ form_start(form) }}
     {{ form_widget(form) }}
-    <button class="btn">{{ button_label|default('Save') }}</button>
+    <button class="btn mb-3 btn btn-primary">{{ button_label|default('Créer ma annonce') }}</button>
 {{ form_end(form) }}
