--- a/templates/property/edit.html.twig
+++ b/templates/property/edit.html.twig
@@ -6,10 +6,10 @@
 <div class="container row m-auto">
     <h1>Modifiez votre annonce</h1>
 
-    {{ include('property/_form.html.twig', {'button_label': 'Update'}) }}
+    {{ include('property/_form.html.twig', {'button_label': 'Modifier ma annonce'}) }}
 </div>
-
-    <a href="{{ path('app_property_index') }}">back to list</a>
+{# TODO Admin #}
+    {# <a href="{{ path('app_property_index') }}">back to list</a> #}
 
     {{ include('property/_delete_form.html.twig') }}
 {% endblock %}
