--- a/templates/property/new.html.twig
+++ b/templates/property/new.html.twig
@@ -8,5 +8,6 @@
     {{ include('property/_form.html.twig') }}
 </div>
 
-<a href="{{ path('app_property_index') }}">back to list</a>
+{# TODO Admin #}
+{# <a href="{{ path('app_property_index') }}">back to list</a> #}
 {% endblock %}
