--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -2,44 +2,60 @@
 
 {% block body %}
 
-<img class="w-50 h-25 d-flex m-auto" src={{asset("images/banniere.jpg")}} alt="">
+	<img class="w-50 h-25 d-flex m-auto" src={{asset("images/banniere.jpg")}} alt="">
 
 	<div class="container row m-auto">
 		{% for property in properties %}
-			<div class="col-sm-6 pt-3">
-				<div class="d-flex gap-1 justify-content-center align-items-center">
-					
-						<img class="w-auto" src={{asset("images/facade.jpg")}} alt="">
-					
-					<div class="">
-						<h1>{{property.title}}</h1>
-						<p>{{property.description}}</p>
-						<p>{{property.price}}
-							€</p>
-						<p>{{property.surface}}
-							m²</p>
-						<p>{{property.town}}</p>
-					</div>
+			<div class="col-md-6 pt-3">
+				<div class="card mb-3">
+					<a href={{ path('app_property_show', {'id': property.id} ) }} class="text-decoration-none text-primary-emphasis">
+						<div class="row g-0">
+							<div class="col-md-4">
+								<img class="img-fluid rounded-start" src={{property.photo}} alt='{{property.title}} image'>
+							</div>
+							<div class="col-md-8">
+								<div class="card-body">
+									<strong class="d-inline-block mb-0 text-success-emphasis">Louer</strong>
+									<h3 class="mb-0">{{property.price}}€</h3>
+
+									<div class="mb-1 text-body-secondary">{{property.createdAt|date('d/m/Y')}}</div>
+									<p class="mb-auto">{{property.description|slice(0,45)}}...</p>
+									<div>
+										<strong>{{property.surface}}m²</strong>
+										<p>{{property.town}},
+											{{property.country}}</p>
+										{# TODO remove comment #}
+										{# <a href={{ path('app_property_show', {'id': property.id} ) }}>
+																																																																																																																																										<button class="btn btn-primary mb-0">Voir</button>
+																																																																																																																																									</a> #}
+									</div>
+								</div>
+							</div>
+						</div>
+					</a>
+
 				</div>
-                <div class="text-center pt-3">
-				<a href={{ path('app_property_show', {'id': property.id}) }}><button class="btn btn-primary ">Voir</button></a>
-                </div>
 			</div>
 
 		{% endfor %}
-</div>
-<div class="d-flex justify-content-center mt-3">
-	{{ knp_pagination_render(properties) }}
-</div>
+	</div>
+	<div class="d-flex justify-content-center mt-3">
+		{{ knp_pagination_render(properties) }}
+	</div>
 
-<div class="container row m-auto">
-<h2 class="text-center pt-5">A propos de nous :</h2>
+	<div class="container row m-auto">
+		<h2 class="text-center pt-5">A propos de nous :</h2>
 
-<p class="m-auto pt-2">Bienvenue chez Pro Immo Portail ! Votre passerelle vers le marché immobilier moderne. Nous sommes une agence <strong>innovante</strong> dédiée à simplifier la recherche de biens immobiliers, que ce soit pour la location ou l'achat. Notre plateforme en ligne offre une expérience sans pareille en mettant en relation des particuliers et des professionnels à travers des annonces de qualité. Notre mission est de rendre le processus de recherche et de transaction immobilière aussi transparent et efficace que possible.</p>
+		<p class="m-auto pt-2">Bienvenue chez Pro Immo Portail ! Votre passerelle vers le marché immobilier moderne. Nous sommes une agence
+			<strong>innovante</strong>
+			dédiée à simplifier la recherche de biens immobiliers, que ce soit pour la location ou l'achat. Notre plateforme en ligne offre une expérience sans pareille en mettant en relation des particuliers et des professionnels à travers des annonces de qualité. Notre mission est de rendre le processus de recherche et de transaction immobilière aussi transparent et efficace que possible.</p>
 
-<p class="pt-3">Ici vous trouverez des <strong>annonces de qualité</strong> grâce à notre séléction rigoureuse de professionnels de l'immobilier.</p>
+		<p class="pt-3">Ici vous trouverez des
+			<strong>annonces de qualité</strong>
+			grâce à notre séléction rigoureuse de professionnels de l'immobilier.</p>
 
-<p><strong>Découvrez aujourd'hui la nouvelle façon de trouver votre chez-vous avec Pro Immo Portail !</strong></p>
-</div>
-
+		<p>
+			<strong>Découvrez aujourd'hui la nouvelle façon de trouver votre chez-vous avec Pro Immo Portail !</strong>
+		</p>
+	</div>
 {% endblock %}
