--- a/templates/property/edit.html.twig
+++ b/templates/property/edit.html.twig
@@ -1,15 +1,16 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Edit Property{% endblock %}
+{% block title %}Edit Property
+{% endblock %}
 
 {% block body %}
-<div class="container row m-auto">
-    <h1>Modifiez votre annonce</h1>
+	<div class="container row m-auto">
+		<h1>Modifiez votre annonce</h1>
 
-    {{ include('property/_form.html.twig', {'button_label': 'Modifier ma annonce'}) }}
-</div>
-{# TODO Admin #}
-    {# <a href="{{ path('app_property_index') }}">back to list</a> #}
+		{{ include('property/_form.html.twig', {'button_label': 'Modifier ma annonce'}) }}
+	</div>
+	{# TODO Admin #}
+	{# <a href="{{ path('app_property_index') }}">back to list</a> #}
 
-    {{ include('property/_delete_form.html.twig') }}
+	{{ include('property/_delete_form.html.twig') }}
 {% endblock %}
