--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -37,25 +37,20 @@
         </button>
 
         <div class="navbar-collapse collapse" id="navbarsExample03" style="">
-          <ul class="navbar-nav me-auto mb-2 mb-sm-0">
-            <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="{{ path('app_favorite') }}"
-                >Favoris</a
-              >
-            </li>
-            {# <li class="nav-item">
-              <a class="nav-link">Mes favoris</a>
-            </li> #}
-          </ul>
-
+           
+          {% if is_granted('IS_AUTHENTICATED_FULLY') %}
+          <div class="dropdown text-end">
+          <span class="d-block link-body-emphasis text-decoration-none dropdown-toggle" data-bs-toggle="dropdown" aria-expanded="false">
+            Vous êtes connecté en tant que :
+          </span>
+           <ul class="dropdown-menu">
+          <li><a class="dropdown-item" href={{ path('app_favorite')}} class="nav-link active">Mes favoris</a></li>
+            <li><a class="dropdown-item" href={{ path('app_reset_password')}} class="nav-link active">Changer mon mot de passe</a></li>
+            <li class="nav-item"><a class="dropdown-item" href={{ path('app_logout')}} class="nav-link active">Déconnexion</a></li>
+        </div>
+          {% else %}
           <div class=" text-end">
             <ul class="nav nav-pills">
-          {% if is_granted('IS_AUTHENTICATED_FULLY') %}
-          
-            <li class="nav-item"><a href={{ path('app_logout')}} class="nav-link active">Déconnexion</a></li>
-          
-        
-          {% else %}
               <li class="nav-item"><a href={{ path('app_login')}} class="nav-link active px-2 mx-3">Connexion</a></li>
                 <li class="nav-item"><a href={{ path('app_register')}} class="nav-link active px-2">Inscription</a></li>
           {% endif %}
