--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -11,7 +11,7 @@
 					<a href={{ path('app_property_show', {'id': property.id} ) }} class="text-decoration-none text-primary-emphasis">
 						<div class="row g-0">
 							<div class="col-md-4">
-								<img class="img-fluid rounded-start" src={{property.photo}} alt='{{property.title}} image'>
+								<img class="img-fluid rounded-start" src={{asset(property.photo)}} alt='{{property.title}} image'>
 							</div>
 							<div class="col-md-8">
 								<div class="card-body">
@@ -24,10 +24,6 @@
 										<strong>{{property.surface}}m²</strong>
 										<p>{{property.town}},
 											{{property.country}}</p>
-										{# TODO remove comment #}
-										{# <a href={{ path('app_property_show', {'id': property.id} ) }}>
-																																																																																																																																										<button class="btn btn-primary mb-0">Voir</button>
-																																																																																																																																									</a> #}
 									</div>
 								</div>
 							</div>
