--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -1,14 +1,30 @@
 {% extends 'base.html.twig' %}
 
 {% block body %}
-	<div class="hero">
-		<img class="w-75 h-100 d-flex m-auto" src={{asset("images/hero.jpg")}} alt="">
-	</div>
 
-	<h1 class="text-center">Les biens disponibles à la vente et à la location:</h1>
-	<div class="container row m-auto">
+</div>
+{# HERO SECTION #}
+<div>
+	<h1 class="text-center mt-4 display-3">Bienvenue chez Pro Immo Portail !</h1>
+
+		<div>
+			Avec Pro Immo Portail, vous trouverez
+			<span {{ stimulus_controller('symfony/ux-typed', { strings: [ 'la maison familiale idéale !', 'l\'appartement de vos rêves !', 'votre coup de coeur immobilier !', 'votre résidence secondaire !'], loop: true, showCursor: true, cursorChar: '|', })}}></span>
+		</div>
+
+	<div class="hero px-0 mt-5">
+		<img class="w-100 h-100 d-flex mx-auto" src="https://images.unsplash.com/photo-1628592102751-ba83b0314276?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=2597&q=80" alt="hero image">
+	</div>
+</div>
+
+
+{# LIST OF PROPERTIES SECTION #}
+<div class="property-list container row mx-auto p-0 mb-4">
+	<h2 class="text-center display-4 mb-4">Les biens disponibles:</h2>
+
+	<div class="container row mx-auto p-0">
 		{% for property in properties %}
-			<div class="col-md-6 pt-3">
+			<div class="col-md-6 col-sm-12 pt-3">
 				<div class="card mb-3">
 					<a href={{ path('app_property_show', {'id': property.id} ) }} class="text-decoration-none text-primary-emphasis">
 						<div class="row g-0">
@@ -19,7 +35,6 @@
 								<div class="card-body">
 									<strong class="d-inline-block mb-0 text-success-emphasis">Louer</strong>
 									<h3 class="mb-0">{{property.price}}€</h3>
-
 									<div class="mb-1 text-body-secondary">{{property.createdAt|date('d/m/Y')}}</div>
 									<p class="mb-auto">{{property.description|slice(0,45)}}...</p>
 									<div>
@@ -40,61 +55,83 @@
 	<div class="d-flex justify-content-center mt-3">
 		{{ knp_pagination_render(properties) }}
 	</div>
+</div>
 
-	<div class="container row m-auto">
-		<div class=" col-md-6">
-			<div class="h-100 p-5 text-bg-dark rounded-3 map"></div>
-		</div>
-		<div class="col-md-6">
-			<div class="h-100 p-5 bg-body-tertiary border rounded-3">
-				<h2 class="text-center pt-5">A propos de nous :</h2>
-				<p class="m-auto pt-2">Bienvenue chez Pro Immo Portail ! Votre passerelle vers le marché immobilier moderne. Nous sommes une agence
-					<strong>innovante</strong>
-					dédiée à simplifier la recherche de biens immobiliers, que ce soit pour la location ou l'achat. Notre plateforme en ligne offre une expérience sans pareille en mettant en relation des particuliers et des professionnels à travers des annonces de qualité. Notre mission est de rendre le processus de recherche et de transaction immobilière aussi transparent et efficace que possible.</p>
+{# AGENCY DIV #}
 
-				<p class="pt-3">Ici vous trouverez des
-					<strong>annonces de qualité</strong>
-					grâce à notre séléction rigoureuse de professionnels de l'immobilier.</p>
+<div class="agency row">
+	<div class="col-lg-6 col-md-12 pt-3">
+		<img src={{asset("images/stimulus.svg")}} class="w-75 h-100 d-flex rounded mx-auto image-fluid" alt="stimulus image">
 
-				<p>
-					<strong>Découvrez aujourd'hui la nouvelle façon de trouver votre chez-vous avec Pro Immo Portail !</strong>
-				</p>
-			</div>
-		</div>
 	</div>
+	<div class="col-md-6 col-sm-12 pt-5">
+		<h3 class="text-center pt-5">A propos de nous</h3>
 
+		<p class="m-auto px-5 pt-3 text-center">Votre passerelle vers le marché immobilier moderne.
+			<br>
+			Nous sommes une agence
 
-<div>
-<h4 class="text-center pt-4 pb-2">Contactez-nous :</h4>
-	<div class="d-flex justify-content-center m-auto pb-5">
-		{{ form_start(form) }}
-
-		<div class="mb-3">
-			<label for="contact_Nom">{{ form_label(form.Nom) }}</label>
-			{{ form_widget(form.Nom, {'attr': {'class': 'form-control'}}) }}
-			{{ form_errors(form.Nom) }}
-		</div>
-		<div class="mb-3">
-			<label for="contact_Penom">{{ form_label(form.Prenom) }}</label>
-			{{ form_widget(form.Prenom, {'attr': {'class': 'form-control'}}) }}
-			{{ form_errors(form.Prenom) }}
-		</div>
-		<div class="mb-3">
-			<label for="contact_Email">{{ form_label(form.Email) }}</label>
-			{{ form_widget(form.Email, {'attr': {'class': 'form-control'}}) }}
-			{{ form_errors(form.Email) }}
-		</div>
-		<div class="mb-3">
-			<label for="contact_Telephone">{{ form_label(form.Telephone) }}</label>
-			{{ form_widget(form.Telephone, {'attr': {'class': 'form-control'}}) }}
-			{{ form_errors(form.Telephone) }}
-		</div>
-		<div class="mb-3">
-			<label for="contact_Message">{{ form_label(form.Message) }}</label>
-			{{ form_widget(form.Message, {'attr': {'class': 'form-control'}}) }}
-			{{ form_errors(form.Message) }}
-		</div>
-		{{ form_end(form) }}
+			<strong>innovante</strong>
+			dédiée à simplifier la recherche de biens immobiliers,
+			<br>que ce soit pour la location ou l'achat.
+		</p>
 	</div>
 </div>
-{% endblock %}
+{# AGENCY DIV #}
+
+<div class="agency row">
+	<div class="col-md-6 col-sm-12 pt-5">
+		<h3 class="text-center pt-5">Bienvenue chez Pro Immo Portail !</h3>
+		<p class="m-auto px-5 pt-3 text-center">Votre passerelle vers le marché immobilier moderne.
+			<br>
+			Nous sommes une agence
+
+			<strong>innovante</strong>
+			dédiée à simplifier la recherche de biens immobiliers, que ce soit pour la location ou l'achat.
+		</p>
+	</div>
+	<div class="col-lg-6 col-md-12 pt-3">
+		<img src={{asset("images/park.svg")}} class="w-50 h-100 d-flex rounded mx-auto image-fluid" alt="stimulus image">
+	</div>
+</div>
+
+
+<div class="row">
+	<div class="col-lg-6 col-md-12 pt-3">
+
+
+		<div class="d-flex flex-column justify-content-end m-auto pb-5 ps-5 ms-5">
+			<h4 class="text-center pt-4 pb-2">Contactez-nous :</h4>
+
+			{{ form_start(form) }}
+
+			<div class="mb-3">
+				<label for="contact_Nom">{{ form_label(form.Nom) }}</label>
+				{{ form_widget(form.Nom, {'attr': {'class': 'form-control'}}) }}
+				{{ form_errors(form.Nom) }}
+			</div>
+			<div class="mb-3">
+				<label for="contact_Penom">{{ form_label(form.Prenom) }}</label>
+				{{ form_widget(form.Prenom, {'attr': {'class': 'form-control'}}) }}
+				{{ form_errors(form.Prenom) }}
+			</div>
+			<div class="mb-3">
+				<label for="contact_Email">{{ form_label(form.Email) }}</label>
+				{{ form_widget(form.Email, {'attr': {'class': 'form-control'}}) }}
+				{{ form_errors(form.Email) }}
+			</div>
+			<div class="mb-3">
+				<label for="contact_Telephone">{{ form_label(form.Telephone) }}</label>
+				{{ form_widget(form.Telephone, {'attr': {'class': 'form-control'}}) }}
+				{{ form_errors(form.Telephone) }}
+			</div>
+			<div class="mb-3">
+				<label for="contact_Message">{{ form_label(form.Message) }}</label>
+				{{ form_widget(form.Message, {'attr': {'class': 'form-control'}}) }}
+				{{ form_errors(form.Message) }}
+			</div>
+			{{ form_end(form) }}
+		</div>
+	</div>
+	<div class="col-lg-6 col-md-12 pt-3"></div>
+</div>{% endblock %}
