--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -44,16 +44,24 @@
 									</div>
 								</div>
 							</div>
-						</a>
+						</div>
+					</a>
 
-					</div>
 				</div>
+			</div>
 
-			{% endfor %}
-		</div>
-		<div class="d-flex justify-content-center mt-3">
-			{{ knp_pagination_render(properties) }}
-		</div>
+		{% endfor %}
+	</div>
+	<div class="d-flex justify-content-center mt-3">
+		{{ knp_pagination_render(properties) }}
+	</div>
+</div>
+
+{# AGENCY DIV #}
+
+<div class="agency row">
+	<div class="col-lg-6 col-md-12 pt-3">
+		<img src={{asset("images/stimulus.svg")}} class="w-75 h-100 d-flex rounded mx-auto image-fluid" alt="stimulus image">
 
 	</div>
 </div>
@@ -106,33 +114,32 @@
 
 			{{ form_start(form) }}
 
-			<div class="mb-3">
-				<label for="contact_Nom">{{ form_label(form.Nom) }}</label>
-				{{ form_widget(form.Nom, {'attr': {'class': 'form-control'}}) }}
-				{{ form_errors(form.Nom) }}
-			</div>
-			<div class="mb-3">
-				<label for="contact_Penom">{{ form_label(form.Prenom) }}</label>
-				{{ form_widget(form.Prenom, {'attr': {'class': 'form-control'}}) }}
-				{{ form_errors(form.Prenom) }}
-			</div>
-			<div class="mb-3">
-				<label for="contact_Email">{{ form_label(form.Email) }}</label>
-				{{ form_widget(form.Email, {'attr': {'class': 'form-control'}}) }}
-				{{ form_errors(form.Email) }}
-			</div>
-			<div class="mb-3">
-				<label for="contact_Telephone">{{ form_label(form.Telephone) }}</label>
-				{{ form_widget(form.Telephone, {'attr': {'class': 'form-control'}}) }}
-				{{ form_errors(form.Telephone) }}
-			</div>
-			<div class="mb-3">
-				<label for="contact_Message">{{ form_label(form.Message) }}</label>
-				{{ form_widget(form.Message, {'attr': {'class': 'form-control'}}) }}
-				{{ form_errors(form.Message) }}
-			</div>
-			{{ form_end(form) }}
+		<div class="mb-3">
+			<label for="contact_Nom">{{ form_label(form.Nom) }}</label>
+			{{ form_widget(form.Nom, {'attr': {'class': 'form-control'}}) }}
+			{{ form_errors(form.Nom) }}
 		</div>
+		<div class="mb-3">
+			<label for="contact_Penom">{{ form_label(form.Prenom) }}</label>
+			{{ form_widget(form.Prenom, {'attr': {'class': 'form-control'}}) }}
+			{{ form_errors(form.Prenom) }}
+		</div>
+		<div class="mb-3">
+			<label for="contact_Email">{{ form_label(form.Email) }}</label>
+			{{ form_widget(form.Email, {'attr': {'class': 'form-control'}}) }}
+			{{ form_errors(form.Email) }}
+		</div>
+		<div class="mb-3">
+			<label for="contact_Telephone">{{ form_label(form.Telephone) }}</label>
+			{{ form_widget(form.Telephone, {'attr': {'class': 'form-control'}}) }}
+			{{ form_errors(form.Telephone) }}
+		</div>
+		<div class="mb-3">
+			<label for="contact_Message">{{ form_label(form.Message) }}</label>
+			{{ form_widget(form.Message, {'attr': {'class': 'form-control'}}) }}
+			{{ form_errors(form.Message) }}
+		</div>
+		{{ form_end(form) }}
 	</div>
 	<div class="col-lg-6 col-md-12 pt-3"></div>
 </div>{% endblock %}
