--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -74,7 +74,7 @@
 			{% block body %}{% endblock %}
 
 			{# FOOTER #}
-			<footer class="d-flex flex-wrap justify-content-between align-items-center py-5 px-3 my-5 border-top">
+			<footer class="d-flex flex-wrap justify-content-between align-items-center py-3 pt-3 border-top">
 				<p class="col-md-4 mb-0 text-body-secondary">© 2023 HAVAIC Marija et PARSONNEAU Aurélie</p>
 
 				<a href="{{ path('app_home') }}" class="col-md-4 d-flex align-items-center justify-content-center mb-3 mb-md-0 me-md-auto link-body-emphasis text-decoration-none">
