--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -5,13 +5,10 @@
 </div>
 {# HERO SECTION #}
 <div>
-	<h1 class="text-center mt-4 display-3">Bienvenue chez Pro Immo Portail !</h1>
-
-		<div>
-			Avec Pro Immo Portail, vous trouverez
-			<span {{ stimulus_controller('symfony/ux-typed', { strings: [ 'la maison familiale idéale !', 'l\'appartement de vos rêves !', 'votre coup de coeur immobilier !', 'votre résidence secondaire !'], loop: true, showCursor: true, cursorChar: '|', })}}></span>
-		</div>
-
+	<div class="stimulus d-flex flex-column justify-content-center">
+		<h1 class="text-center mt-4 display-3">Avec Pro Immo Portail, vous trouverez</h1>
+		<span class="text-center mt-4 display-3 justify-content-center" {{ stimulus_controller('symfony/ux-typed', { strings: [ 'la maison familiale idéale !', 'l\'appartement de vos rêves !', 'votre coup de coeur immobilier !', 'votre résidence secondaire !'], loop: true, showCursor: true, cursorChar: '|' })}}></span>
+	</div>
 	<div class="hero px-0 mt-5">
 		<img class="w-100 h-100 d-flex mx-auto" src="https://images.unsplash.com/photo-1628592102751-ba83b0314276?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=2597&q=80" alt="hero image">
 	</div>
@@ -66,30 +63,35 @@
 
 	</div>
 	<div class="col-md-6 col-sm-12 pt-5">
-		<h3 class="text-center pt-5">A propos de nous</h3>
+<h3 class="text-center pt-5">Bienvenue chez Pro Immo Portail !</h3>
 
-		<p class="m-auto px-5 pt-3 text-center">Votre passerelle vers le marché immobilier moderne.
-			<br>
-			Nous sommes une agence
+		
+<p class="m-auto px-5 pt-3 text-center">Votre passerelle vers le marché immobilier moderne.
+	<br>
+	Nous sommes une agence
 
-			<strong>innovante</strong>
-			dédiée à simplifier la recherche de biens immobiliers,
-			<br>que ce soit pour la location ou l'achat.
-		</p>
+	<strong>innovante</strong>
+	dédiée à simplifier la recherche de biens immobiliers, <br>que ce soit pour la location ou l'achat.
+</p>
+
+	
 	</div>
 </div>
 {# AGENCY DIV #}
 
 <div class="agency row">
 	<div class="col-md-6 col-sm-12 pt-5">
-		<h3 class="text-center pt-5">Bienvenue chez Pro Immo Portail !</h3>
-		<p class="m-auto px-5 pt-3 text-center">Votre passerelle vers le marché immobilier moderne.
-			<br>
-			Nous sommes une agence
+<h3 class="text-center pt-5">A propos de nous</h3>
 
-			<strong>innovante</strong>
-			dédiée à simplifier la recherche de biens immobiliers, que ce soit pour la location ou l'achat.
-		</p>
+<p class="m-auto px-5 pt-3 text-center">Votre passerelle vers le marché immobilier moderne.
+	<br>
+	Nous sommes une agence
+
+	<strong>innovante</strong>
+	dédiée à simplifier la recherche de biens immobiliers,
+	<br>que ce soit pour la location ou l'achat.
+</p>
+
 	</div>
 	<div class="col-lg-6 col-md-12 pt-3">
 		<img src={{asset("images/park.svg")}} class="w-50 h-100 d-flex rounded mx-auto image-fluid" alt="stimulus image">
