--- a/assets/styles/app.css
+++ b/assets/styles/app.css
@@ -1,23 +1,6 @@
 .hero {
     height: 30rem;
-    position: relative;
 }
-
-/* .hero::after {
-    content: "";
-    position: absolute;
-    left: 0;
-    right: 0;
-    top: 0;
-    width: 100%;
-    height: 100%;
-    display: inline-block;
-    background: linear-gradient(
-        to bottom,
-        rgba(233, 227, 227, 0.096),
-        rgba(0, 0, 0, 0.336)
-    );
-} */
 
 img {
     object-fit: cover;
@@ -32,4 +15,8 @@ img {
     height: 18rem;
     /* margin: 10rem 0 20rem 0; */
     margin-bottom: 13rem;
+}
+
+.stimulus {
+    height: 10rem;
 }
