correction du français / ajout de commentaires

--- a/templates/favorite/index.html.twig
+++ b/templates/favorite/index.html.twig
@@ -5,6 +5,7 @@
 {% block body %}
 
 <h1>Mes favoris :</h1>
+{# loop to display saved favorites #}
 <div class="container row m-auto">
 {% for favorite in favorites %}
     {% for property in favorite.property %}
