--- a/templates/property/edit.html.twig
+++ b/templates/property/edit.html.twig
@@ -1,6 +1,6 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Edit Property
+{% block title %}Modifier l'annonce
 {% endblock %}
 
 {% block body %}
