--- a/templates/cond_utilisation/index.html.twig
+++ b/templates/cond_utilisation/index.html.twig
@@ -9,11 +9,11 @@
 </style>
 
 <div class="example-wrapper">
-    <h2 class="pb-5 text-center">Conditions générales d'utilisation du site Pro-Immo-Portail</h2>
+    <h2 class="pb-5 text-center">Conditions générales d'utilisation du site Pro Immo Portail</h2>
 
 <h4>ARTICLE 1 : Objet</h4>
 
-<p>Les présentes « conditions générales d'utilisation » ont pour objet l'encadrement juridique de l’utilisation du site Pro-Immo-Portail et de ses services.</p>
+<p>Les présentes « conditions générales d'utilisation » ont pour objet l'encadrement juridique de l’utilisation du site Pro Immo Portail et de ses services.</p>
 
 <p>Ce contrat est conclu entre :</p>
 
@@ -32,11 +32,11 @@
 
 <p>Pour les personnes physiques : </p>
 
-<p>Le site Pro-Immo-Portail est édité par Havaic Marija et Parsonneau Aurélie.</p>
+<p>Le site Pro Immo Portail est édité par Havaic Marija et Parsonneau Aurélie.</p>
 
 <h4>ARTICLE 3 : accès aux services</h4>
 
-<p>L’Utilisateur du site Pro-Immo-Portail a accès aux services suivants :</p>
+<p>L’Utilisateur du site Pro Immo Portail a accès aux services suivants :</p>
 
 <ul>
 <li>La possibilité de se constituer un compte personnel au travers duquel l'Utilisateur aura notamment la possibilité d'accéder aux offres de vente / location de biens immobiliers correspondant à des critères de recherches particuliers qu'il aura sélectionnés au préalable. Ce service permet également de recevoir par courrier électronique les nouvelles offres de vente / location de biens immobiliers correspondant aux critères sélectionnés par l'Utilisateur.
@@ -47,8 +47,6 @@ De même que l'accès aux Services avec ces identifiant et mot de passe s'effect
 Dès lors, en cas de perte, de vol ou tout acte frauduleux à l'égard de son identifiant unique et de son mot de passe, l'Utilisateur doit en informer la Société dans les plus brefs délais et justifier à cette occasion de son identité par tous moyens.
 A réception de sa notification dûment justifiée, la Société adressera à l'Utilisateur un nouvel identifiant et mot de passe, à charge pour lui de les conserver strictement confidentiels.</li>
 <li>Visualisation d'offres de vente et / location de biens immobiliers </li>
-<li>L'accès aux coordonnées des Annonceurs titulaires des offres de vente / location de biens immobiliers diffusés sur le Site Internet</li>
-<li>Possibilité de mise en favoris des annonces des biens immobiliers</li>
 <li>Mise en ligne d'annonces de biens immobiliers (réservé aux utilisateurs professionnels de l'immobilier)</li>
 </ul>
 
@@ -86,7 +84,7 @@ A réception de sa notification dûment justifiée, la Société adressera à l'
 
 <h4>ARTICLE 6 : Propriété intellectuelle</h4>
 
-<p>Les contenus du site Pro-Immo-Portail (logos, textes, éléments graphiques, vidéos, etc.) son protégés par le droit d’auteur, en vertu du Code de la propriété intellectuelle.</p>
+<p>Les contenus du site Pro Immo Portail (logos, textes, éléments graphiques, vidéos, etc.) son protégés par le droit d’auteur, en vertu du Code de la propriété intellectuelle.</p>
 
 <p>L’Utilisateur devra obtenir l’autorisation de l’éditeur du site avant toute reproduction, copie ou publication de ces différents contenus.</p>
 
@@ -100,9 +98,9 @@ A réception de sa notification dûment justifiée, la Société adressera à l'
 
 <p>L’Utilisateur doit obligatoirement fournir des informations personnelles pour procéder à son inscription sur le site. </p>
 
-<p>L’adresse électronique (e-mail) de l’utilisateur pourra notamment être utilisée par le site Pro-Immo-Portail pour la communication d’informations diverses et la gestion du compte.</p>
+<p>L’adresse électronique (e-mail) de l’utilisateur pourra notamment être utilisée par le site Pro Immo Portail pour la communication d’informations diverses et la gestion du compte.</p>
 
-<p>Pro-Immo-Portail garantie le respect de la vie privée de l’utilisateur, conformément à la loi n°78-17 du 6 janvier 1978 relative à l'informatique, aux fichiers et aux libertés.</p>
+<p>Pro Immo Portail garantie le respect de la vie privée de l’utilisateur, conformément à la loi n°78-17 du 6 janvier 1978 relative à l'informatique, aux fichiers et aux libertés.</p>
 
 <p>Le site est déclaré auprès de la CNIL sous le numéro suivant : [numéro].</p>
 
@@ -115,14 +113,14 @@ A réception de sa notification dûment justifiée, la Société adressera à l'
 
 <h4>ARTICLE 8 : Liens hypertextes</h4>
 
-<p>Les domaines vers lesquels mènent les liens hypertextes présents sur le site n’engagent pas la responsabilité de l’Éditeur de Pro-Immo-Portail, qui n’a pas de contrôle sur ces liens.</p>
+<p>Les domaines vers lesquels mènent les liens hypertextes présents sur le site n’engagent pas la responsabilité de l’Éditeur de Pro Immo Portail, qui n’a pas de contrôle sur ces liens.</p>
 
-<p>Il est possible pour un tiers de créer un lien vers une page du site Pro-Immo-Portail sans autorisation expresse de l’éditeur.</p>
+<p>Il est possible pour un tiers de créer un lien vers une page du site Pro Immo Portail sans autorisation expresse de l’éditeur.</p>
 
 
 <h4>ARTICLE 9 : Évolution des conditions générales d’utilisation</h4>
 
-<p>Le site Pro-Immo-Portail se réserve le droit de modifier les clauses de ces conditions générales d’utilisation à tout moment et sans justification.</p>
+<p>Le site Pro Immo Portail se réserve le droit de modifier les clauses de ces conditions générales d’utilisation à tout moment et sans justification.</p>
 
 
 <h4>ARTICLE 10 : Durée du contrat</h4>
