--- a/templates/property/_delete_form.html.twig
+++ b/templates/property/_delete_form.html.twig
@@ -1,5 +1,5 @@
 <form method="post" action="{{ path('app_property_delete', {'id': property.id}) }}" onsubmit="return confirm('Are you sure you want to delete this item?');">
 	<input type="hidden" name="_token" value="{{ csrf_token('delete' ~ property.id) }}">
-	<button class="btn mb-3 btn btn-primary">Delete</button>
+	<button class="btn mb-3 btn btn-primary">Supprimer</button>
 
 </form>
